[package]
name = "net"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_lib"
crate-type = ["dylib"]

[dependencies]
bincode = "1.3.2"
message-io = { default-features = false, features = ["udp", "tcp"], version = "0.10.2" }
serde = {version="1.0.124", features=["derive"]}
